# Centrifugal-Compressor-Preliminary-Design

./: .gitignore  .gitmodules  MODULE.bazel  README.md  WORKSPACE  centrifugal_calcs.m  diffuser_calcs.m  inputs.txt  outlet_calcs.m  outlet_loop.m  read_file.m  setup.py  vaneless_diffuser_calcs.m
.github/workflows/: main_ci.yml
MATLAB/: diff_diameter.m  geometric_inlet_angle.m  inlet_calcs.m  inlet_loop.m  inputs.txt  main.m  max_diameter.m  moody.m  tip_diameter.m
MATLAB/Fluids/: air
MATLAB/Materials/: Al_7075
centrifugal_calculations/: BUILD
neptune/: BUILD  README.md  __main__.py  manage.py
neptune/ccpd/: BUILD  apps.py  models.py  urls.py  views.py
neptune/ccpd/static/ccpd/: main.css
neptune/ccpd/templates/ccpd/: about.html  base.html  ccpd.html  home.html  test.html
neptune/ccpd_ui/: BUILD  README.md  apps.py  models.py  urls.py  views.py
neptune/ccpd_ui/static/ccpd/: dark_mode_button.js  main.css
neptune/ccpd_ui/templates/ccpd/: about.html  base.html  ccpd.html
neptune/centrifugal_calculations/: apps.py  views.py
neptune/neptune/: BUILD  settings.py  urls.py
neptune/neptune_web_ui/: BUILD  README.md  asgi.py  settings.py  urls.py  wsgi.py
