"""
Main bazel MODULE file
"""

module(name = "ccpd-pro", version = "0.2.0")

# Python rules
bazel_dep(name = "rules_python", version = "0.27.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

python.toolchain(
    is_default = True,
    python_version = "3.10",
)
use_repo(python, "python_3_10", "python_versions")

pip.parse(
    name = "pip",
    python_version = "3.10",
    requirements_lock = "//third_party:requirements_lock.txt",
)

use_repo(pip, "pip")
